fix type of api error, add Dockerfile
